--- a/public/style.css
+++ b/public/style.css
@@ -47,6 +47,7 @@ button:active {
 #favicon {
     height: 85px;
     border: 5px solid #fff;
+    background-color: #4ac97f;
 }
 path {
     transition: 180ms;
