--- a/public/style.css
+++ b/public/style.css
@@ -30,7 +30,7 @@ a:hover {
 .filled-div {
     background-color: #3ca367;
     color: #fff;
-    padding: 7px;
+    padding: 10px 40px 10px 40px;
 }
 #map svg {
     filter: drop-shadow(1.5px 1.5px 0px #daedfe)
@@ -39,7 +39,7 @@ a:hover {
         drop-shadow(1.5px -1.5px 0px #daedfe);
     width: 100%;
 }
-#country {
+#top {
     position: fixed;
     top: 0px;
     width: 100vw;
@@ -48,7 +48,7 @@ a:hover {
 #player {
     position: fixed;
     bottom: 0px;
-    height: 120px;
+    height: 170px;
     width: 100vw;
     border-top: 5px solid #fff;
 }
