--- a/public/style.css
+++ b/public/style.css
@@ -19,6 +19,9 @@ button:hover {
 button:active {
     transform: scale(70%);
 }
+b {
+    font-weight: bold;
+}
 a {
     color: #5ed1c2 !important;
     transition: 180ms;
@@ -26,6 +29,12 @@ a {
 a:hover {
     color: #3ca367;
     background: #fff;
+}
+@keyframes flash {
+    to { visibility: hidden; }
+}
+.flashing {
+    animation: flash 1s steps(2, start) infinite;
 }
 .tag {
     background: #000;
